--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.15.5",
     "express": "^4.17.1",
     "pug": "^3.0.2",
+    "socket.io": "^4.2.0",
     "ws": "^8.2.2"
   }
 }
