--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
+    "@socket.io/admin-ui": "^0.2.0",
     "express": "^4.17.1",
     "pug": "^3.0.2",
     "socket.io": "^4.2.0",
